--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ build-webserver.sh text eol=lf
 build-dbserver.sh text eol=lf
 build-batchserver.sh text eol=lf
 setup-database.sql text eol=lf
+website.conf text eol=lf
