--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ build-dbserver.sh text eol=lf
 build-batchserver.sh text eol=lf
 setup-database.sql text eol=lf
 website.conf text eol=lf
+conv/makeSheet.pl eol=lf
