--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 
 build-webserver.sh text eol=lf
 build-dbserver.sh text eol=lf
-build-batchserver.sh text eol=lf
+build-pdfserver.sh text eol=lf
 setup-database.sql text eol=lf
 website.conf text eol=lf
 conv/makeSheet.pl eol=lf
