--- a/.gitattributes
+++ b/.gitattributes
@@ -12,4 +12,5 @@ build-pdfserver.sh text eol=lf
 setup-database.sql text eol=lf
 website.conf text eol=lf
 conv/makeSheet.pl eol=lf
+conv/run-files.sh eol=lf
 apache2.conf eol=lf
